11712406-project2/test/test_11712406_2.out
Error type 1 at Line 9: undefined varaible: people
Error type 14 at Line 9: accessing with non-struct variable
Error type 5 at Line 9: unmatching type on both sides of assignment
Error type 14 at Line 10: no such member: friends
Error type 5 at Line 10: unmatching type on both sides of assignment
Error type 1 at Line 13: undefined varaible: friend