11712406-project2/test/test_11712406_2.spl
struct Student {
  int name;
};

int main(int c) {
  struct Student tom;
  int i = 0;
  while (i < 10) {
    people[i].name = 3.4;
    tom.friends[i] = i;
    i = i + 1;
  }
  return friend;
}